8044725: Bug in zlib 1.2.5 prevents inflation of some gzipped files (zlib 1.2.8 port)

Reviewed-by: sherman